--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
   }
